# play-nest

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  instrumentation.ts  middleware.ts  package-lock.json  package.json  proxy.ts
.claude/: settings.local.json
app/: globals.css  page.tsx
app/(app)/: layout.tsx
components/admin/: AttendanceViewer.tsx  AuditLogViewer.tsx  BiometricEnrollmentManager.tsx  InventoryManager.tsx  QrCodeManager.tsx  RateManager.tsx  ReportsClient.tsx  StaffManager.tsx  TransactionsManager.tsx  VenueBookingsManager.tsx  VenuePackageManager.tsx
components/pos/: CheckoutModal.tsx  NewSessionModal.tsx  PosBoard.tsx  ScanInput.tsx  SessionCard.tsx  ShopModal.tsx  VenueBanner.tsx
components/print/: QrStickerSheet.tsx  Receipt.tsx  Ticket.tsx
components/shared/: ClockInOutButton.tsx  SignOutButton.tsx
docs/: architecture.md  contracts.md  decisions.md  infra.md  services.md
lib/api/: response.ts
lib/config/: auth.ts  logger.ts
lib/db/: client.ts  migrate.ts  seed.ts
lib/services/: attendance.service.ts  audit.service.ts  billing.service.ts  bookingPayment.service.ts  customer.service.ts  inventory.service.ts  payment.service.ts  (+8 more)
scripts/: deploy-ec2.sh  generate-icons.js  prepare-tauri-bundle.js
src-tauri/: Cargo.toml  loading.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  printer.rs  system.rs
types/: next-auth.d.ts
(+84 files in other folders)
