[package]
name = "playnest"
version = "0.1.0"
description = "PlayNest POS — Mall Playground Management System"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "playnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
